--- a/assets/css/spectrum-rust.css
+++ b/assets/css/spectrum-rust.css
@@ -301,6 +301,8 @@ a.light-text:focus {
   .navbar-light .navbar-brand .logo-collapse img {
     max-height: 50px;
     margin: 0;
+    margin-top: 8px;
+    width: 150px;
   }
   .navbar-dark .nav li,
   .navbar-light .nav li {
@@ -2831,4 +2833,10 @@ p.demo-text {
   font-family: 'Pacifico', serif;
   margin-top: 20px;
   font-size: 25px;
+}
+
+/* customization */
+.footer-logo > img {
+  width: 150px;
+  margin-bottom: 10px;
 }
